--- a/reactversion/source2/src/containers/css/Bio.css
+++ b/reactversion/source2/src/containers/css/Bio.css
@@ -5,6 +5,7 @@
      top:50%;
      left:50%;
      transform: translate(-50%, -50%);
+     z-index:1;
  }
 
  .bioFractalWrapper{
@@ -45,6 +46,7 @@
      opacity: 0.8;
      transition: opacity 0.3s ease;
      animation: storyArrow 2s ease-in;
+     z-index:1;
  }
 
  #storyArrow:hover{
